--- a/package.json
+++ b/package.json
@@ -12,34 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.5",
-    "@angular/common": "9.0.5",
-    "@angular/compiler": "9.0.5",
-    "@angular/core": "9.0.5",
-    "@angular/forms": "9.0.5",
+    "@angular/animations": "9.1.11",
+    "@angular/common": "9.1.11",
+    "@angular/compiler": "9.1.11",
+    "@angular/core": "9.1.11",
+    "@angular/forms": "9.1.11",
     "@angular/http": "7.2.16",
     "@angular/localize": "^9.1.11",
-    "@angular/platform-browser": "9.0.5",
-    "@angular/platform-browser-dynamic": "9.0.5",
-    "@angular/router": "9.0.5",
+    "@angular/platform-browser": "9.1.11",
+    "@angular/platform-browser-dynamic": "9.1.11",
+    "@angular/router": "9.1.11",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "4.5.0",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "^3.6.5",
-    "crypto-js": "^4.0.0",
+    "crypto-js": "4.0.0",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
     "node-sass": "^4.14.1",
     "nouislider": "13.1.1",
-    "rxjs": "6.5.4",
-    "zone.js": "0.10.2"
+    "rxjs": "6.5.5",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.8",
-    "@angular/cli": "^9.0.5",
-    "@angular/compiler-cli": "9.0.5",
-    "@angular/language-service": "9.0.5",
+    "@angular/cli": "^9.1.8",
+    "@angular/compiler-cli": "9.1.11",
+    "@angular/language-service": "9.1.11",
     "@types/jasmine": "3.5.8",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "13.7.7",
